[package]
name = "lfa-rs"
version = "0.1.0"
edition = "2021"
description = "Functions and constants for LFA (Linux for ARM)"
authors = ["Pelmen Zharenny"]
license = "MIT"

[profile.release]
lto = true
strip = true
debug = false
panic = "abort"
opt-level = "s"

[dependencies]
colored = "2.1.0"
rand = "0.8.5"
serde = { version = "1.0.199", features = ["derive"] }
toml = "0.8.12"
